interaction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interaction-service-active
  namespace: k8s
spec:
  selector:
    app: interaction-service
  ports:
    - name: http
      port: 3004
      targetPort: 3004
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interaction-service
  namespace: k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interaction-service
  template:
    metadata:
      labels:
        app: interaction-service
    spec:
      containers:
        - name: interaction-service
          image: ghcr.io/sneakertail/interaction-service:dev
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3004
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
