product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service-active
  namespace: k8s
spec:
  selector:
    app: product-service
  ports:
    - name: http
      port: 3002
      targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: ghcr.io/sneakertail/product-service:dev
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3002
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
