sneakertail-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sneakertail-route
  namespace: k8s
spec:
  parentRefs:
  - name: kgateway
    namespace: dev
  hostnames:
  - "sneakertail.online"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/auth
    backendRefs:
    - name: auth-service-active
      port: 3001
  - matches:
    - path:
        type: PathPrefix
        value: /api/products
    backendRefs:
    - name: product-service-active
      port: 3002
  - matches:
    - path:
        type: PathPrefix
        value: /api/raffle
    backendRefs:
    - name: raffle-service-active
      port: 3003
  - matches:
    - path:
        type: PathPrefix
        value: /api/payment
    backendRefs:
    - name: payment-service-active
      port: 3005
  - matches:
    - path:
        type: PathPrefix
        value: /api/cart
    backendRefs:
    - name: interaction-service-active
      port: 3004
  - matches:
    - path:
        type: PathPrefix
        value: /api/wishlist
    backendRefs:
    - name: interaction-service-active
      port: 3004
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-active
      port: 80
